backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: jagadamma/nginx:v1
        ports:
        - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - port: 4000          # Port inside the cluster
      targetPort: 4000    # Port inside the container
      nodePort: 31000     # Fixed NodePort (range: 30000–32767)
  type: NodePort
